增加国际化语言功能

--- a/LmcFrames/Resources/Base.lproj/Localizable.strings
+++ b/LmcFrames/Resources/Base.lproj/Localizable.strings
@@ -6,6 +6,6 @@
   Copyright © 2016年 lmc. All rights reserved.
 */
 
-"ButtonTile" = "Are you kidding me ...";
+"ButtonTile" = "3D Touch...";
 
 "Detail" = "Detail...";
