完善国际化，应用内切换语言

--- a/LmcFrames/Resources/en.lproj/Localizable.strings
+++ b/LmcFrames/Resources/en.lproj/Localizable.strings
@@ -9,3 +9,17 @@
 "ButtonTile" = "3D Touch...";
 
 "Detail" = "Detail...";
+
+//tabBar
+"msg" = "Message";
+"find" = "Find";
+"me" = "Me";
+//msg
+"3DTouch" = "3D Touch";
+"moveEvent" = "Move Event(Shake)";
+"chinese" = "Chinese";
+"english" = "English";
+"server" = "Server";
+"aboutUS" = "About US";
+"contactUS" = "Contact US";
+"version" = "Version";
