封装简单的tableView二级展开列表...

--- a/LmcFrames/Resources/en.lproj/Localizable.strings
+++ b/LmcFrames/Resources/en.lproj/Localizable.strings
@@ -20,7 +20,7 @@
 "searchController" = "SearchController";
 "chinese" = "Chinese";
 "english" = "English";
-"server" = "Server";
+"MultilevelCell" = "MultilevelCell";
 "aboutUS" = "About US";
 "contactUS" = "Contact US";
 "version" = "Version";
