--- a/LmcFrames/Resources/zh-Hans.lproj/Localizable.strings
+++ b/LmcFrames/Resources/zh-Hans.lproj/Localizable.strings
@@ -20,7 +20,7 @@
 "searchController" = "搜索控制器";
 "chinese" = "中文";
 "english" = "英文";
-"server" = "服务条款";
+"MultilevelCell" = "tableView二级展开";
 "aboutUS" = "关于我们";
 "contactUS" = "联系我们";
 "version" = "版本";
