试玩IOS 10新特性，ScfollView自带下拉刷新

--- a/LmcFrames/Resources/en.lproj/Localizable.strings
+++ b/LmcFrames/Resources/en.lproj/Localizable.strings
@@ -21,6 +21,6 @@
 "chinese" = "Chinese";
 "english" = "English";
 "MultilevelCell" = "MultilevelCell";
-"aboutUS" = "About US";
+"RefreshControl" = "UIRefreshControl";
 "contactUS" = "Contact US";
 "version" = "Version";
