--- a/LmcFrames/Resources/zh-Hans.lproj/Localizable.strings
+++ b/LmcFrames/Resources/zh-Hans.lproj/Localizable.strings
@@ -21,6 +21,6 @@
 "chinese" = "中文";
 "english" = "英文";
 "MultilevelCell" = "tableView二级展开";
-"aboutUS" = "关于我们";
+"RefreshControl" = "IOS 10 自带RefreshControl";
 "contactUS" = "联系我们";
 "version" = "版本";
